--- a/ml/scraper/wordcloud.ipynb
+++ b/ml/scraper/wordcloud.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "f8f3483f",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "7103b05c",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "9e91cd36",
    "metadata": {},
    "outputs": [],
@@ -219,8 +219,325 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9fb8abe4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('keywords.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "258c0bea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, row in df.iterrows():\n",
+    "    keywords = row.keywords\n",
+    "    uuid = row.uuid\n",
+    "    db.Article.update_one({\n",
+    "      'uuid': uuid\n",
+    "    },{\n",
+    "      '$set': {\n",
+    "        'keywords': keywords\n",
+    "      }\n",
+    "    }, upsert=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6e5bb585",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uuid</th>\n",
+       "      <th>url</th>\n",
+       "      <th>title</th>\n",
+       "      <th>image</th>\n",
+       "      <th>subtitle</th>\n",
+       "      <th>content</th>\n",
+       "      <th>lemmatized_text</th>\n",
+       "      <th>keywords</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0026af85-18b8-42a1-966a-17ac9d7ce9ea</td>\n",
+       "      <td>https://www.rt.com/sport/552398-russian-gymnas...</td>\n",
+       "      <td>Russian ‘Z’ symbol gymnast speaks out over fea...</td>\n",
+       "      <td>https://mf.b37mrtl.ru/files/2022.03/xxs/623884...</td>\n",
+       "      <td>Ivan Kuliak said he did ‘nothing wrong’, while...</td>\n",
+       "      <td>Russian gymnast Ivan Kuliak insists he should ...</td>\n",
+       "      <td>Russian gymnast Ivan Kuliak insist he should n...</td>\n",
+       "      <td>[('gymnast', 0.4213), ('gymnastics', 0.4113), ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>026d11d8-98cb-4700-8fed-277eec712ba1</td>\n",
+       "      <td>https://www.rt.com/sport/552445-evgeny-rylov-s...</td>\n",
+       "      <td>Olympic champion stripped of Speedo deal after...</td>\n",
+       "      <td>https://mf.b37mrtl.ru/files/2022.03/xxs/623987...</td>\n",
+       "      <td>Evgeny Rylov appeared at the event in Moscow l...</td>\n",
+       "      <td>Swimwear company Speedo has terminated its spo...</td>\n",
+       "      <td>Swimwear company Speedo have terminate its spo...</td>\n",
+       "      <td>[('olympic', 0.4624), ('olympics', 0.434), ('r...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0217dc27-6c93-49f0-87ff-b8e83d959c7a</td>\n",
+       "      <td>https://www.rt.com/sport/552931-russia-banned-...</td>\n",
+       "      <td>Norway’s boycott of Russia caused safety fears...</td>\n",
+       "      <td>https://mf.b37mrtl.ru/files/2022.03/xxs/624342...</td>\n",
+       "      <td>The Norwegian Ski Federation issued a blunt st...</td>\n",
+       "      <td>Russian skiers feared for their safety at even...</td>\n",
+       "      <td>Russian skiers fear for their safety at events...</td>\n",
+       "      <td>[('skiers', 0.5369), ('skiathlon', 0.535), ('s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00bce962-4ca4-40e1-a869-7b25724acfbf</td>\n",
+       "      <td>https://sputniknews.com/20220319/are-bidens-af...</td>\n",
+       "      <td>Are Biden's Afghanistan &amp; Ukraine Blunders Beh...</td>\n",
+       "      <td>https://cdnn1.img.sputniknews.com/img/07e5/04/...</td>\n",
+       "      <td>On 16 March, The New York Times finally admitt...</td>\n",
+       "      <td>\"The NYT piece on Hunter Biden's laptop comes ...</td>\n",
+       "      <td>\"The NYT piece on Hunter Biden's laptop come a...</td>\n",
+       "      <td>[('nyt', 0.4291), ('biden', 0.3542), ('msnbc',...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>018d31cd-bf19-4afe-b71c-9d2d1cb163e6</td>\n",
+       "      <td>https://www.rt.com/news/552914-cyberattacks-uk...</td>\n",
+       "      <td>Russia blames US for cyberattacks</td>\n",
+       "      <td>https://mf.b37mrtl.ru/files/2022.03/xxs/624310...</td>\n",
+       "      <td>Moscow repels hundreds of thousands of cyberat...</td>\n",
+       "      <td>The US and its allies have put together a grou...</td>\n",
+       "      <td>The US and its ally have put together a group ...</td>\n",
+       "      <td>[('cyberattacks', 0.4585), ('moscow', 0.417), ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>763</th>\n",
+       "      <td>ffd68803-c869-4202-8ab0-74190d4356d1</td>\n",
+       "      <td>https://sputniknews.com/20220329/russian-speci...</td>\n",
+       "      <td>Russian Special Forces Capture Ukrainian Natio...</td>\n",
+       "      <td>https://cdnn1.img.sputniknews.com/img/105096/8...</td>\n",
+       "      <td>Earlier, a video was circulated on social medi...</td>\n",
+       "      <td>Russian Special Forces have managed to detain ...</td>\n",
+       "      <td>Russian Special Forces have manage to detain U...</td>\n",
+       "      <td>[('russian', 0.409), ('ukrainians', 0.3996), (...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>764</th>\n",
+       "      <td>fa86b42f-646b-42ce-896e-4939e94aa890</td>\n",
+       "      <td>https://www.rt.com/russia/552285-donbass-russi...</td>\n",
+       "      <td>Historic roots of the Donbass problem explained</td>\n",
+       "      <td>https://mf.b37mrtl.ru/files/2022.03/xxs/6235b3...</td>\n",
+       "      <td>The region has a distinct identity and doesn’t...</td>\n",
+       "      <td>Originally published on March 19, 2022.Current...</td>\n",
+       "      <td>Originally publish on March 19, 2022.Current e...</td>\n",
+       "      <td>[('rus', 0.4088), ('donbass', 0.4049), ('donkr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>765</th>\n",
+       "      <td>ffdc483a-91b0-4d5e-88db-9fcaa8aa9518</td>\n",
+       "      <td>https://www.rt.com/news/552652-pope-women-sanc...</td>\n",
+       "      <td>Pope speaks against sanctions, calls for more ...</td>\n",
+       "      <td>https://mf.b37mrtl.ru/files/2022.03/xxs/623cb9...</td>\n",
+       "      <td>The Pontiff said women could convert power fro...</td>\n",
+       "      <td>Women must change the way society is governed,...</td>\n",
+       "      <td>Women must change the way society be governed,...</td>\n",
+       "      <td>[('pope', 0.4754), ('governed', 0.3192), ('glo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>766</th>\n",
+       "      <td>39a479c7-6efa-4bf4-a1a2-5880fb8e369d</td>\n",
+       "      <td>https://www.rt.com/russia/552600-diplomats-pre...</td>\n",
+       "      <td>Experts warned for decades that NATO expansion...</td>\n",
+       "      <td>https://mf.b37mrtl.ru/files/2022.03/xxs/623c35...</td>\n",
+       "      <td>Analysts and diplomats have been saying since ...</td>\n",
+       "      <td>Russia’s military offensive in Ukraine has bee...</td>\n",
+       "      <td>Russia’s military offensive in Ukraine have be...</td>\n",
+       "      <td>[('geopolitical', 0.379), ('putin', 0.355), ('...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>767</th>\n",
+       "      <td>53bc8f3f-31f2-4816-a4c1-c408b6ecd5b6</td>\n",
+       "      <td>https://www.rt.com/russia/553067-ukraine-biola...</td>\n",
+       "      <td>Russia presents new evidence on Ukraine biolab...</td>\n",
+       "      <td>https://mf.b37mrtl.ru/files/2022.03/xxs/62460a...</td>\n",
+       "      <td>Documents detail fate of US-funded deadly path...</td>\n",
+       "      <td>The Russian military has presented documents s...</td>\n",
+       "      <td>The Russian military have present document sho...</td>\n",
+       "      <td>[('drone', 0.3814), ('aerosolize', 0.3443), ('...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>768 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     uuid  \\\n",
+       "0    0026af85-18b8-42a1-966a-17ac9d7ce9ea   \n",
+       "1    026d11d8-98cb-4700-8fed-277eec712ba1   \n",
+       "2    0217dc27-6c93-49f0-87ff-b8e83d959c7a   \n",
+       "3    00bce962-4ca4-40e1-a869-7b25724acfbf   \n",
+       "4    018d31cd-bf19-4afe-b71c-9d2d1cb163e6   \n",
+       "..                                    ...   \n",
+       "763  ffd68803-c869-4202-8ab0-74190d4356d1   \n",
+       "764  fa86b42f-646b-42ce-896e-4939e94aa890   \n",
+       "765  ffdc483a-91b0-4d5e-88db-9fcaa8aa9518   \n",
+       "766  39a479c7-6efa-4bf4-a1a2-5880fb8e369d   \n",
+       "767  53bc8f3f-31f2-4816-a4c1-c408b6ecd5b6   \n",
+       "\n",
+       "                                                   url  \\\n",
+       "0    https://www.rt.com/sport/552398-russian-gymnas...   \n",
+       "1    https://www.rt.com/sport/552445-evgeny-rylov-s...   \n",
+       "2    https://www.rt.com/sport/552931-russia-banned-...   \n",
+       "3    https://sputniknews.com/20220319/are-bidens-af...   \n",
+       "4    https://www.rt.com/news/552914-cyberattacks-uk...   \n",
+       "..                                                 ...   \n",
+       "763  https://sputniknews.com/20220329/russian-speci...   \n",
+       "764  https://www.rt.com/russia/552285-donbass-russi...   \n",
+       "765  https://www.rt.com/news/552652-pope-women-sanc...   \n",
+       "766  https://www.rt.com/russia/552600-diplomats-pre...   \n",
+       "767  https://www.rt.com/russia/553067-ukraine-biola...   \n",
+       "\n",
+       "                                                 title  \\\n",
+       "0    Russian ‘Z’ symbol gymnast speaks out over fea...   \n",
+       "1    Olympic champion stripped of Speedo deal after...   \n",
+       "2    Norway’s boycott of Russia caused safety fears...   \n",
+       "3    Are Biden's Afghanistan & Ukraine Blunders Beh...   \n",
+       "4                    Russia blames US for cyberattacks   \n",
+       "..                                                 ...   \n",
+       "763  Russian Special Forces Capture Ukrainian Natio...   \n",
+       "764    Historic roots of the Donbass problem explained   \n",
+       "765  Pope speaks against sanctions, calls for more ...   \n",
+       "766  Experts warned for decades that NATO expansion...   \n",
+       "767  Russia presents new evidence on Ukraine biolab...   \n",
+       "\n",
+       "                                                 image  \\\n",
+       "0    https://mf.b37mrtl.ru/files/2022.03/xxs/623884...   \n",
+       "1    https://mf.b37mrtl.ru/files/2022.03/xxs/623987...   \n",
+       "2    https://mf.b37mrtl.ru/files/2022.03/xxs/624342...   \n",
+       "3    https://cdnn1.img.sputniknews.com/img/07e5/04/...   \n",
+       "4    https://mf.b37mrtl.ru/files/2022.03/xxs/624310...   \n",
+       "..                                                 ...   \n",
+       "763  https://cdnn1.img.sputniknews.com/img/105096/8...   \n",
+       "764  https://mf.b37mrtl.ru/files/2022.03/xxs/6235b3...   \n",
+       "765  https://mf.b37mrtl.ru/files/2022.03/xxs/623cb9...   \n",
+       "766  https://mf.b37mrtl.ru/files/2022.03/xxs/623c35...   \n",
+       "767  https://mf.b37mrtl.ru/files/2022.03/xxs/62460a...   \n",
+       "\n",
+       "                                              subtitle  \\\n",
+       "0    Ivan Kuliak said he did ‘nothing wrong’, while...   \n",
+       "1    Evgeny Rylov appeared at the event in Moscow l...   \n",
+       "2    The Norwegian Ski Federation issued a blunt st...   \n",
+       "3    On 16 March, The New York Times finally admitt...   \n",
+       "4    Moscow repels hundreds of thousands of cyberat...   \n",
+       "..                                                 ...   \n",
+       "763  Earlier, a video was circulated on social medi...   \n",
+       "764  The region has a distinct identity and doesn’t...   \n",
+       "765  The Pontiff said women could convert power fro...   \n",
+       "766  Analysts and diplomats have been saying since ...   \n",
+       "767  Documents detail fate of US-funded deadly path...   \n",
+       "\n",
+       "                                               content  \\\n",
+       "0    Russian gymnast Ivan Kuliak insists he should ...   \n",
+       "1    Swimwear company Speedo has terminated its spo...   \n",
+       "2    Russian skiers feared for their safety at even...   \n",
+       "3    \"The NYT piece on Hunter Biden's laptop comes ...   \n",
+       "4    The US and its allies have put together a grou...   \n",
+       "..                                                 ...   \n",
+       "763  Russian Special Forces have managed to detain ...   \n",
+       "764  Originally published on March 19, 2022.Current...   \n",
+       "765  Women must change the way society is governed,...   \n",
+       "766  Russia’s military offensive in Ukraine has bee...   \n",
+       "767  The Russian military has presented documents s...   \n",
+       "\n",
+       "                                       lemmatized_text  \\\n",
+       "0    Russian gymnast Ivan Kuliak insist he should n...   \n",
+       "1    Swimwear company Speedo have terminate its spo...   \n",
+       "2    Russian skiers fear for their safety at events...   \n",
+       "3    \"The NYT piece on Hunter Biden's laptop come a...   \n",
+       "4    The US and its ally have put together a group ...   \n",
+       "..                                                 ...   \n",
+       "763  Russian Special Forces have manage to detain U...   \n",
+       "764  Originally publish on March 19, 2022.Current e...   \n",
+       "765  Women must change the way society be governed,...   \n",
+       "766  Russia’s military offensive in Ukraine have be...   \n",
+       "767  The Russian military have present document sho...   \n",
+       "\n",
+       "                                              keywords  \n",
+       "0    [('gymnast', 0.4213), ('gymnastics', 0.4113), ...  \n",
+       "1    [('olympic', 0.4624), ('olympics', 0.434), ('r...  \n",
+       "2    [('skiers', 0.5369), ('skiathlon', 0.535), ('s...  \n",
+       "3    [('nyt', 0.4291), ('biden', 0.3542), ('msnbc',...  \n",
+       "4    [('cyberattacks', 0.4585), ('moscow', 0.417), ...  \n",
+       "..                                                 ...  \n",
+       "763  [('russian', 0.409), ('ukrainians', 0.3996), (...  \n",
+       "764  [('rus', 0.4088), ('donbass', 0.4049), ('donkr...  \n",
+       "765  [('pope', 0.4754), ('governed', 0.3192), ('glo...  \n",
+       "766  [('geopolitical', 0.379), ('putin', 0.355), ('...  \n",
+       "767  [('drone', 0.3814), ('aerosolize', 0.3443), ('...  \n",
+       "\n",
+       "[768 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.Article.update_one({\n",
+    "      'uuid': uuid\n",
+    "    },{\n",
+    "      '$set': {\n",
+    "        'keywords': keywords\n",
+    "      }\n",
+    "    }, upsert=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4f79136",
    "metadata": {},
    "outputs": [],
    "source": []
